publisher bug fixed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oneman-web-extensions",
   "displayName": "OneMan Web Extensions",
-  "publisher": "SohanEmon",
+  "publisher": "sohanemon",
   "icon": "",
   "description": "",
   "version": "0.0.1",
