--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "oneman-web-extensions",
   "displayName": "OneMan Web Extensions",
   "publisher": "sohanemon",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sohanemon/oneman-web-extensions"
+  },
   "icon": "",
   "description": "",
   "version": "0.0.1",
