--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "type": "git",
     "url": "https://github.com/sohanemon/oneman-web-extensions"
   },
-  "icon": "",
+  "icon": "assets/icon.png",
   "description": "",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "engines": {
     "vscode": "^1.77.0"
   },
