--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "icon": "assets/icon.png",
   "description": "",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "engines": {
     "vscode": "^1.77.0"
   },
@@ -23,7 +23,9 @@
     "christian-kohler.path-intellisense",
     "christian-kohler.npm-intellisense",
     "moalamri.inline-fold",
+    "humao.rest-client",
     "eamodio.gitlens",
+    "gruntfuggly.todo-tree",
     "streetsidesoftware.code-spell-checker",
     "pkief.material-icon-theme",
     "robbowen.synthwave-vscode",
