--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "icon": "assets/icon.png",
   "description": "",
-  "version": "0.2.3",
+  "license": "none",
+  "version": "0.2.4",
   "engines": {
     "vscode": "^1.77.0"
   },
