--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "robbowen.synthwave-vscode",
     "cardinal90.multi-cursor-case-preserve",
     "mongodb.mongodb-vscode",
+    "naumovs.color-highlight",
     "styled-components.vscode-styled-components",
     "blanu.vscode-styled-jsx",
     "leodriesch.paste-html-as-jsx",
+    "vincaslt.highlight-matching-tag",
     "visualstudioexptteam.intellicode-api-usage-examples",
     "VisualStudioExptTeam.vscodeintellicode",
     "formulahendry.auto-close-tag",
