comment divider added

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "naumovs.color-highlight",
     "styled-components.vscode-styled-components",
     "blanu.vscode-styled-jsx",
+    "stackbreak.comment-divider",
     "leodriesch.paste-html-as-jsx",
     "vincaslt.highlight-matching-tag",
     "visualstudioexptteam.intellicode-api-usage-examples",
