--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "humao.rest-client",
     "eamodio.gitlens",
     "gruntfuggly.todo-tree",
+    "venryx.vscode-vtools",
     "streetsidesoftware.code-spell-checker",
     "pkief.material-icon-theme",
     "robbowen.synthwave-vscode",
